@@ -61,6 +61,7 @@
     * 0880 Added support for 389 Directory Server to LDAP connector
     * 0607 online help text for host creation in WATO now also explains hostname caching
     * 0781 FIX: host diag page: fixed problem with update of diagnose subwindows...
+    * 0904 FIX: Fixed exception in host parameter overview...
 
     Notifications:
     * 0754 Allow users to disable their notifications completely...
